[gd_scene load_steps=7 format=4 uid="uid://b8vrsovbdtjkt"]

[ext_resource type="Script" uid="uid://dd8x58xu7ulhs" path="res://scenes/request_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://g7tan0u6thu5" path="res://textures/icons/wifi.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ctd0qhiaqmdqt" path="res://textures/icons/token.png" id="3"]

[sub_resource type="Animation" id="Animation_mpnll"]
resource_name = "Claim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IconPanel/Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06, 0.21, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.21, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yu6g8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IconPanel/Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s5isc"]
_data = {
&"Claim": SubResource("Animation_mpnll"),
&"RESET": SubResource("Animation_yu6g8")
}

[node name="MilestonePanel" type="Panel"]
custom_minimum_size = Vector2(0, 130)
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"MenuPanelTitle"
script = ExtResource("1")

[node name="IconPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -50.0
offset_right = 115.0
offset_bottom = 50.0
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"BackPanel"

[node name="Icon" type="TextureRect" parent="IconPanel"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 13.0
offset_right = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("2")
expand_mode = 1

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
offset_left = 130.0
offset_top = 20.0
offset_right = -183.0
offset_bottom = 101.0
size_flags_horizontal = 3
theme_override_constants/separation = 8
alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="InfoContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="InfoContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "[Comp][Scan] Program Pack"

[node name="Count" type="Label" parent="InfoContainer/NameContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
text = "0/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
max_value = 1.0
step = 0.001
value = 0.45
show_percentage = false

[node name="Claim" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme_type_variation = &"ButtonHighlighted"

[node name="RewardContainer" type="HBoxContainer" parent="Claim"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Icon" type="TextureRect" parent="Claim/RewardContainer"]
self_modulate = Color(1, 0.521569, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3")
expand_mode = 1

[node name="Label" type="Label" parent="Claim/RewardContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s5isc")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Claim" to="." method="_on_claim_pressed"]
